# b1-pipeline

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
config/: b1_rules.yaml  chart.yaml  fetch.yaml  review.yaml
docs/: development.md  sample_outputs.md
examples/: README.md  sample_review_result.json  sample_summary.md
scripts/: run_case_review.py  run_export_charts.py  run_fetch.py  run_fill_missing_non_st.py  run_fill_missing_non_st_safe.py  run_pack_review_input.py  run_pipeline.py  run_pipeline_all.sh  run_preprocess.py  run_preselect.py  run_quick_validate.py  run_review.py  run_sample_cases.py
src/charts/: plot_daily_chart.py
src/common/: config_loader.py  io_utils.py  logger.py  paths.py
src/data_fetch/: fetch_daily.py  fetch_market_cap.py  fetch_stock_basic.py  tushare_client.py
src/indicators/: building_wave.py  kdj.py  key_k.py  price_features.py  volume_features.py  zhixing_lines.py
src/pipeline/: chart_pipeline.py  fetch_pipeline.py  full_pipeline.py  preprocess_pipeline.py  preselect_pipeline.py  review_pipeline.py
src/preprocess/: merge_features.py
src/review/: review_formatter.py  review_pack_builder.py  scoring_engine.py
src/selectors/: b1_filter.py  candidate_builder.py  light_gate.py
tests/: test_b1_filter.py  test_kdj.py  test_zhixing_lines.py
