[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "b1-pipeline"
version = "0.1.0"
description = "A-share B1 semi-automatic stock-selection pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "yang" }
]
dependencies = [
  "pandas>=2.2,<3.0",
  "numpy>=1.26,<3.0",
  "pyyaml>=6.0,<7.0",
  "tushare>=1.4,<2.0",
  "matplotlib>=3.8,<4.0",
  "mplfinance>=0.12.10b0,<1.0",
  "pytest>=8.0,<9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
